--- a/FP1.ipynb
+++ b/FP1.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
     "    \n",
     "    #here we want to calculate the cpu usage rate per individual VM so i look at the individual\n",
     "    #cpu usage rate and divide it over 7/100 or 25/100\n",
-    "    cpuUsageRate = (7- VMCPUUsage)/(totalCPUCount)\n",
+    "    cpuUsageRate = (totalCPUCount- VMCPUUsage)/(totalCPUCount)\n",
     "    \n",
     "    static = 0\n",
     "    if cpuUsageRate > 0:\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,6 +522,7 @@
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
     "                #energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
     "                index = VM_id\n",
+    "                break\n",
     "                    \n",
     "        #is schedulable thank the lord\n",
     "        if index != -1:\n",
@@ -532,7 +533,7 @@
     "            VMs[index][1] = VMs[index][1] - mem\n",
     "            \n",
     "            # Because we scheduled the task, update power, cost, and time:\n",
-    "            power = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
+    "            power = getEnergyConsumption(VMs[index][0], cpuTotal, threshhold)\n",
     "            totalPower += power\n",
     "            totalCost += getCost(row['Time'], power)\n",
     "            totalTurnaroundTime += row[executionTime]\n",
@@ -549,7 +550,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -557,233 +560,81 @@
      "text": [
       "76\n",
       "90000\n",
-      "596\n",
-      "0\n",
       "90300\n",
-      "48759\n",
-      "0\n",
       "90600\n",
-      "76850\n",
-      "0\n",
       "90900\n",
-      "72525\n",
-      "0\n",
       "91200\n",
-      "70932\n",
-      "0\n",
       "91500\n",
-      "73567\n",
-      "0\n",
       "91800\n",
-      "73433\n",
-      "0\n",
       "92100\n",
-      "72660\n",
-      "0\n",
       "92400\n",
-      "74503\n",
-      "145\n",
       "92700\n",
-      "72426\n",
-      "0\n",
       "93000\n",
-      "73826\n",
-      "0\n",
       "93300\n",
-      "74475\n",
-      "0\n",
       "93600\n",
-      "75295\n",
-      "0\n",
       "93900\n",
-      "75543\n",
-      "1\n",
       "94200\n",
-      "69300\n",
-      "0\n",
       "94500\n",
-      "70197\n",
-      "0\n",
       "94800\n",
-      "73575\n",
-      "0\n",
       "95100\n",
-      "72675\n",
-      "0\n",
       "95400\n",
-      "73787\n",
-      "0\n",
       "95700\n",
-      "74433\n",
-      "0\n",
       "96000\n",
-      "73512\n",
-      "0\n",
       "96300\n",
-      "71394\n",
-      "0\n",
       "96600\n",
-      "70162\n",
-      "0\n",
       "96900\n",
-      "69935\n",
-      "0\n",
       "97200\n",
-      "69627\n",
-      "0\n",
       "97500\n",
-      "65843\n",
-      "0\n",
       "97800\n",
-      "67284\n",
-      "0\n",
       "98100\n",
-      "72416\n",
-      "0\n",
       "98400\n",
-      "70015\n",
-      "0\n",
       "98700\n",
-      "71627\n",
-      "0\n",
       "99000\n",
-      "77332\n",
-      "0\n",
       "99300\n",
-      "72144\n",
-      "0\n",
       "99600\n",
-      "70064\n",
-      "0\n",
       "99900\n",
-      "72532\n",
-      "0\n",
       "100200\n",
-      "72338\n",
-      "0\n",
       "100500\n",
-      "71789\n",
-      "0\n",
       "100800\n",
-      "71844\n",
-      "0\n",
       "101100\n",
-      "71833\n",
-      "0\n",
       "101400\n",
-      "71721\n",
-      "0\n",
       "101700\n",
-      "74389\n",
-      "275\n",
       "102000\n",
-      "71496\n",
-      "2\n",
       "102300\n",
-      "72208\n",
-      "0\n",
       "102600\n",
-      "76357\n",
-      "76\n",
       "102900\n",
-      "70149\n",
-      "0\n",
       "103200\n",
-      "66853\n",
-      "0\n",
       "103500\n",
-      "71279\n",
-      "0\n",
       "103800\n",
-      "71372\n",
-      "0\n",
       "104100\n",
-      "72883\n",
-      "0\n",
       "104400\n",
-      "72431\n",
-      "0\n",
       "104700\n",
-      "73179\n",
-      "0\n",
       "105000\n",
-      "73440\n",
-      "0\n",
       "105300\n",
-      "73308\n",
-      "0\n",
       "105600\n",
-      "69745\n",
-      "0\n",
       "105900\n",
-      "68469\n",
-      "0\n",
       "106200\n",
-      "68329\n",
-      "0\n",
       "106500\n",
-      "69076\n",
-      "0\n",
       "106800\n",
-      "66184\n",
-      "0\n",
       "107100\n",
-      "69092\n",
-      "0\n",
       "107400\n",
-      "66227\n",
-      "0\n",
       "107700\n",
-      "68862\n",
-      "0\n",
       "108000\n",
-      "71140\n",
-      "0\n",
       "108300\n",
-      "68579\n",
-      "0\n",
       "108600\n",
-      "70502\n",
-      "0\n",
       "108900\n",
-      "70084\n",
-      "0\n",
       "109200\n",
-      "70871\n",
-      "0\n",
       "109500\n",
-      "72573\n",
-      "0\n",
       "109800\n",
-      "70833\n",
-      "0\n",
       "110100\n",
-      "69501\n",
-      "0\n",
       "110400\n",
-      "71816\n",
-      "0\n",
       "110700\n",
-      "70949\n",
-      "0\n",
       "111000\n",
-      "68567\n",
-      "0\n",
       "111300\n",
-      "71186\n",
-      "0\n",
       "111600\n",
-      "71952\n",
-      "0\n",
       "111900\n",
-      "70175\n",
-      "0\n",
       "112200\n",
-      "70689\n",
-      "0\n",
       "112500\n",
-      "28420\n",
-      "0\n",
       "Total Power:  307953.97321428085\n",
       "Total Cost:  246363.17857143344\n",
       "Total Turnaround Time:  9228000.0\n"
@@ -806,9 +657,7 @@
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
     "    print(i)\n",
-    "    print(len(taskQueue))\n",
     "    returnObj = GreedyPower(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
-    "    print(len(returnObj[0]))\n",
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
     "    totalPower = returnObj[2]\n",
@@ -832,47 +681,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "499\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(rejected))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "76\n",
       "90000\n",
-      "0\n",
       "90300\n",
-      "0\n",
       "90600\n",
-      "0\n",
       "90900\n",
-      "0\n",
       "91200\n",
-      "0\n",
       "91500\n",
-      "0\n",
       "91800\n",
-      "0\n",
       "92100\n",
-      "0\n",
       "92400\n",
-      "102\n",
       "92700\n",
-      "0\n",
-      "Total Power:  2458493.2638313756\n",
-      "Total Cost:  1943809.778762856\n",
-      "Total Turnaround Time:  28787400.0\n"
+      "93000\n",
+      "93300\n",
+      "93600\n",
+      "93900\n",
+      "94200\n",
+      "94500\n",
+      "94800\n",
+      "95100\n",
+      "95400\n",
+      "95700\n",
+      "96000\n",
+      "96300\n",
+      "96600\n",
+      "96900\n",
+      "97200\n",
+      "97500\n",
+      "97800\n",
+      "98100\n",
+      "98400\n",
+      "98700\n",
+      "99000\n",
+      "99300\n",
+      "99600\n",
+      "99900\n",
+      "100200\n",
+      "100500\n",
+      "100800\n",
+      "101100\n",
+      "101400\n",
+      "101700\n",
+      "102000\n",
+      "102300\n",
+      "102600\n",
+      "102900\n",
+      "103200\n",
+      "103500\n",
+      "103800\n",
+      "104100\n",
+      "104400\n",
+      "104700\n",
+      "105000\n",
+      "105300\n",
+      "105600\n",
+      "105900\n",
+      "106200\n",
+      "106500\n",
+      "106800\n",
+      "107100\n",
+      "107400\n",
+      "107700\n",
+      "108000\n",
+      "108300\n",
+      "108600\n",
+      "108900\n",
+      "109200\n",
+      "109500\n",
+      "109800\n",
+      "110100\n",
+      "110400\n",
+      "110700\n",
+      "111000\n",
+      "111300\n",
+      "111600\n",
+      "111900\n",
+      "112200\n",
+      "112500\n",
+      "Total Power:  316117.8571428556\n",
+      "Total Cost:  246363.17857143344\n",
+      "Total Turnaround Time:  9228000.0\n"
      ]
     }
    ],
@@ -894,10 +782,8 @@
     "    taskQueue = taskQueue.append(nextQueue)\n",
     "    print(i)\n",
     "    \n",
-    "    \n",
     "    returnObj = GreedyCost(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
     "    rejected += returnObj[0]\n",
-    "    print(len(returnObj[0]))\n",
     "    nextQueue = returnObj[1]\n",
     "    totalPower = returnObj[2]\n",
     "    totalCost = returnObj[3]\n",
@@ -913,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -922,236 +808,25 @@
      "text": [
       "76\n",
       "90000\n",
-      "596\n",
-      "0\n",
+      "22919.535315688652\n",
       "90300\n",
-      "48759\n",
-      "0\n",
+      "1882001.7864316404\n",
       "90600\n",
-      "76850\n",
-      "3673\n",
+      "3896461.45970202\n",
       "90900\n",
-      "72525\n",
-      "3338\n",
+      "3849354.704361001\n",
       "91200\n",
-      "70932\n",
-      "3955\n",
+      "3630417.778260625\n",
       "91500\n",
-      "73567\n",
-      "5508\n",
+      "3483680.839883505\n",
       "91800\n",
-      "73433\n",
-      "6147\n",
+      "3508891.2578921984\n",
       "92100\n",
-      "72660\n",
-      "5922\n",
+      "3512003.656807987\n",
       "92400\n",
-      "74503\n",
-      "7948\n",
+      "3715475.7514348985\n",
       "92700\n",
-      "72426\n",
-      "5287\n",
-      "93000\n",
-      "73826\n",
-      "4556\n",
-      "93300\n",
-      "74475\n",
-      "5185\n",
-      "93600\n",
-      "75295\n",
-      "5147\n",
-      "93900\n",
-      "75543\n",
-      "5775\n",
-      "94200\n",
-      "69300\n",
-      "4341\n",
-      "94500\n",
-      "70197\n",
-      "3797\n",
-      "94800\n",
-      "73575\n",
-      "6523\n",
-      "95100\n",
-      "72675\n",
-      "4663\n",
-      "95400\n",
-      "73787\n",
-      "4073\n",
-      "95700\n",
-      "74433\n",
-      "4264\n",
-      "96000\n",
-      "73512\n",
-      "4392\n",
-      "96300\n",
-      "71394\n",
-      "4396\n",
-      "96600\n",
-      "70162\n",
-      "4540\n",
-      "96900\n",
-      "69935\n",
-      "4415\n",
-      "97200\n",
-      "69627\n",
-      "3506\n",
-      "97500\n",
-      "65843\n",
-      "2767\n",
-      "97800\n",
-      "67284\n",
-      "2605\n",
-      "98100\n",
-      "72416\n",
-      "3418\n",
-      "98400\n",
-      "70015\n",
-      "3573\n",
-      "98700\n",
-      "71627\n",
-      "2941\n",
-      "99000\n",
-      "77332\n",
-      "5562\n",
-      "99300\n",
-      "72144\n",
-      "4058\n",
-      "99600\n",
-      "70064\n",
-      "3150\n",
-      "99900\n",
-      "72532\n",
-      "4577\n",
-      "100200\n",
-      "72338\n",
-      "5290\n",
-      "100500\n",
-      "71789\n",
-      "5262\n",
-      "100800\n",
-      "71844\n",
-      "5447\n",
-      "101100\n",
-      "71833\n",
-      "4918\n",
-      "101400\n",
-      "71721\n",
-      "4810\n",
-      "101700\n",
-      "74389\n",
-      "6276\n",
-      "102000\n",
-      "71496\n",
-      "4919\n",
-      "102300\n",
-      "72208\n",
-      "4938\n",
-      "102600\n",
-      "76357\n",
-      "6596\n",
-      "102900\n",
-      "70149\n",
-      "3826\n",
-      "103200\n",
-      "66853\n",
-      "2392\n",
-      "103500\n",
-      "71279\n",
-      "2406\n",
-      "103800\n",
-      "71372\n",
-      "2980\n",
-      "104100\n",
-      "72883\n",
-      "3681\n",
-      "104400\n",
-      "72431\n",
-      "4797\n",
-      "104700\n",
-      "73179\n",
-      "4108\n",
-      "105000\n",
-      "73440\n",
-      "4303\n",
-      "105300\n",
-      "73308\n",
-      "4451\n",
-      "105600\n",
-      "69745\n",
-      "2921\n",
-      "105900\n",
-      "68469\n",
-      "2625\n",
-      "106200\n",
-      "68329\n",
-      "3159\n",
-      "106500\n",
-      "69076\n",
-      "4246\n",
-      "106800\n",
-      "66184\n",
-      "2735\n",
-      "107100\n",
-      "69092\n",
-      "3545\n",
-      "107400\n",
-      "66227\n",
-      "3804\n",
-      "107700\n",
-      "68862\n",
-      "2880\n",
-      "108000\n",
-      "71140\n",
-      "4052\n",
-      "108300\n",
-      "68579\n",
-      "3749\n",
-      "108600\n",
-      "70502\n",
-      "5241\n",
-      "108900\n",
-      "70084\n",
-      "4464\n",
-      "109200\n",
-      "70871\n",
-      "4367\n",
-      "109500\n",
-      "72573\n",
-      "4595\n",
-      "109800\n",
-      "70833\n",
-      "4374\n",
-      "110100\n",
-      "69501\n",
-      "4418\n",
-      "110400\n",
-      "71816\n",
-      "5607\n",
-      "110700\n",
-      "70949\n",
-      "4497\n",
-      "111000\n",
-      "68567\n",
-      "3859\n",
-      "111300\n",
-      "71186\n",
-      "4159\n",
-      "111600\n",
-      "71952\n",
-      "5123\n",
-      "111900\n",
-      "70175\n",
-      "4948\n",
-      "112200\n",
-      "70689\n",
-      "5481\n",
-      "112500\n",
-      "28420\n",
-      "0\n",
-      "Total Power:  0.0\n",
-      "Total Cost:  0.0\n",
-      "Total Turnaround Time:  9228000.0\n"
+      "3687827.1780935014\n"
      ]
     }
    ],
@@ -1171,12 +846,11 @@
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
     "    print(i)\n",
-    "    print(len(taskQueue))\n",
     "    returnObj = GreedyTurnaroundTime(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
     "    rejected += returnObj[0]\n",
-    "    print(len(returnObj[0]))\n",
     "    nextQueue = returnObj[1]\n",
     "    totalPower = returnObj[2]\n",
+    "    print(totalPower)\n",
     "    totalCost = returnObj[3]\n",
     "    totalTurnaroundTime = returnObj[4]\n",
     "\n",
@@ -1197,19 +871,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Power:  -7988742.8499986\n",
-      "Total Cost:  -6390994.279997127\n",
-      "Total Turnaround Time:  241750800.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run greedy power for CPU = 25 and Mem = 40\n",
     "VMs = [[25, 40] for i in range(100)]\n",
@@ -1229,9 +893,10 @@
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
     "    totalPower = returnObj[2]\n",
+    "    print(totalPower)\n",
+    "    print(totalCost)\n",
     "    totalCost = returnObj[3]\n",
     "    totalTurnaroundTime = returnObj[4]\n",
-    "\n",
     "if len(rejected) > 0:\n",
     "    np.save(\"taskReject_2_i\", rejected)\n",
     "np.save(\"VMs_2_i\", VMs)\n",
@@ -1309,6 +974,13 @@
     "print(\"Total Cost: \", totalCost)\n",
     "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1333,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
